syntax = "proto3";

package com.test.shared;

option java_multiple_files = true;
option java_package = "com.test.shared";

service OrderService {
  rpc createOrder(CreateOrderRequest) returns (OrderResponse) {
  }

  rpc getOrder(GetOrderRequest) returns (OrderResponse) {
  }
}

enum PaymentMethod {
  WALLET = 0;
  CREDIT_CARD = 1;
}

message CreateOrderRequest {
  int32 customerId = 1;
  int32 sellerId = 2;
  Product product = 3;
  PaymentMethod paymentMethod = 4;
  string deliveryLocation = 5;
}

message Product {
  int32 productId = 1;
  string productName = 2;
}

message OrderResponse {
  int32 customerId = 1;
  int32 sellerId = 2;
  Product product = 3;
  string paymentMethod = 4;
  string deliveryLocation = 5;
  string orderId = 6;
  string orderStatus = 7;
  string createdTime = 8;
  string updatedTime = 9;
}

message GetOrderRequest {
  string orderId = 1;
  int32 customerId = 2;
}